--- a/src/components/footers/footer/Footer.module.css
+++ b/src/components/footers/footer/Footer.module.css
@@ -8,7 +8,6 @@
   overflow: hidden;
   margin-top: 0;
 }
-
 .container {
   margin: 20px 40px;
   display: grid;
@@ -110,6 +109,13 @@
   word-break: break-word;
   flex: 1;
 }
+
+.leftAlign {
+  align-self: flex-start;
+  text-align: left;
+  width: 100%; /* ensures it stretches left within the column */
+}
+
 
 /* Adjust margin of sectionTitle */
 .sectionTitle {
@@ -245,5 +251,32 @@
 
   .logoImage {
     max-width: 120px;
+  }
+}
+
+@media (max-width: 768px) {
+  .footer {
+    padding: 2rem 0.5rem 1rem;
+  }
+
+  .container {
+    grid-template-columns: 1fr;
+    padding: 0 1rem;
+    gap: 1rem; /* reduce vertical space between grid items */
+  }
+
+  .section {
+    padding: 0.5rem 0;
+    margin-top: 0.5rem;
+  }
+
+  .bottomSection {
+    flex-direction: column;
+    text-align: center;
+    gap: 1.5rem;
+  }
+
+  .logoImage {
+    max-width: 150px;
   }
 }
