--- a/src/components/member/memberdetails/Memberdetail.module.css
+++ b/src/components/member/memberdetails/Memberdetail.module.css
@@ -3,7 +3,7 @@
   padding: 20px;
   max-width: 95%;
   margin: 70px auto;
-  background: linear-gradient(135deg, #e6baed 0%, #c813bc 100%);
+  /* background: linear-gradient(135deg, #e6baed 0%, #c813bc 100%); */
   border-radius: 20px;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.15);
   color: #fff;
@@ -11,9 +11,16 @@
 }
 
 /* Main section styling */
-.main {
+/* .main {
   display: flex;
   flex-direction: row-reverse;
+  align-items: center;
+  gap: 20px;
+  margin-bottom: 30px;
+} */
+.main {
+  display: flex;
+  flex-direction: row; /* changed from row-reverse */
   align-items: center;
   gap: 20px;
   margin-bottom: 30px;
@@ -70,8 +77,8 @@
 .info {
   background: rgba(255, 255, 255, 0.95);
   border-radius: 15px;
-  width: 60%;
-  margin-left: 250px;
+  width: 500px;;
+  margin-left: 30px;
   padding: 25px;
   box-shadow: 0 6px 14px rgba(0, 0, 0, 0.1);
   line-height: 1.5;
@@ -92,7 +99,7 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 20px;
-  margin: 20px 0;
+  margin-left: 500px;
 }
 
 .workItem {
@@ -146,8 +153,8 @@
 .achievements {
   background: rgba(255, 255, 255, 0.95);
   border-radius: 15px;
-  width: 90%;
-  margin-left: 50px;
+  /* width: 90%; */
+  margin-left: 500px;
   padding: 20px;
   box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
 }
