changes in the committee member page

--- a/src/components/footers/footer/Footer.module.css
+++ b/src/components/footers/footer/Footer.module.css
@@ -192,9 +192,9 @@
 
 
 .socialLink:hover {
-  background: transparent;
+ 
   transform: translateY(-3px);
-  color: #ffffff;
+   opacity: 0.85;
 }
 
 /* Responsive Design */
