--- a/src/components/footers/footer/Footer.module.css
+++ b/src/components/footers/footer/Footer.module.css
@@ -21,21 +21,12 @@
 }
 
 .logoImage {
-  max-width: 150px;
+  max-width: 180px;
   height: auto;
   display: block;
   margin: 0 auto 1rem;
 }
 
-/* .sectionTitle {
-  font-size: 1.25rem;
-  font-weight: 600;
-  margin-bottom: 1rem;
-  margin-bottom: 1.5rem;
-  text-align: center;
-  color: #F5E8E4;
-  position: relative;
-} */
 
 .sectionTitle::after {
   content: '';
@@ -69,9 +60,6 @@
   color: #F28C82;
   padding-left: 5px;
 }
-
-
-
 
 /* Contact Info Adjustments */
 .contactInfo {
@@ -279,4 +267,14 @@
   .logoImage {
     max-width: 150px;
   }
+  /* .leftAlign {
+  align-self: flex-start;
+  text-align: center;
+  width: 100%; ensures it stretches left within the column 
 }
+.icon{
+  text-align: center;
+}*/
+
+}
+
