--- a/src/components/logins/login/Login.module.css
+++ b/src/components/logins/login/Login.module.css
@@ -34,11 +34,12 @@
 }
 
 .logoimage {
-  width: 200px; /* Fixed base size for consistency */
+  width: 250px; /* Fixed base size for consistency */
   height: auto; /* Maintain aspect ratio */
   max-width: 60%; /* Prevents it from growing too large */
   min-width: 80px; /* Minimum size for very small screens */
   margin-bottom: 10px;
+  margin-top: 50px;
 }
 
 .logos {
@@ -56,6 +57,7 @@
   background-color: white;
   width: 90%;
   max-width: 400px;
+  height: 400px;
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
   margin: 0 auto;
 }
@@ -72,7 +74,8 @@ input {
 .loginbutton {
   padding: 10px;
   font-size: 14px;
-  background: linear-gradient(135deg, #ff6b9d, #ff8e53);
+ background-color: #BF0426; /* background: linear-gradient(135deg, #ff6b9d, #ff8e53); */
+
   color: white;
   border: none;
   border-radius: 5px;
@@ -99,7 +102,7 @@ button:hover {
 }
 
 a {
-  color: #e91e63;
+  color: #BF0426;
   text-decoration: none;
 }
 
