--- a/src/components/footers/footer/Footer.module.css
+++ b/src/components/footers/footer/Footer.module.css
@@ -1,6 +1,7 @@
 /* Footer.module.css */
 .footer {
-  background: linear-gradient(135deg,  #4B0082 0%, #C71585 100%);
+  /* background: linear-gradient(135deg,  #4B0082 0%, #C71585 100%); */
+  background-color: #BF0426;
   color: #F5E8E4;
   /* padding: 3rem 1rem 1rem; */
   font-family: 'Poppins', sans-serif;
