--- a/src/components/home/homeabout/Homeabout.module.css
+++ b/src/components/home/homeabout/Homeabout.module.css
@@ -27,7 +27,7 @@
 }
 
 .content h2 {
-  font-size: 24px;
+  font-size: 25px;
   margin-top: 10px;
   text-align: center;
   margin-bottom: 10px;
@@ -43,7 +43,8 @@
 
 /* Button Styles */
 .buttonview {
- background: linear-gradient(135deg, #ff6b9d, #ff8e53);
+ /* background: linear-gradient(135deg, #ff6b9d, #ff8e53); */
+ background-color: #BF0426;
   color: #fff;
   margin-left: 260px; /* Fixed margin for desktop */
   margin-top: 30px;
