--- a/src/components/logins/forgotpassword/Forgotpassword.module.css
+++ b/src/components/logins/forgotpassword/Forgotpassword.module.css
@@ -102,7 +102,8 @@ input:focus {
 .forgotbtn {
   width: 100%;
   padding: 12px;
- background: linear-gradient(135deg, #ff6b9d, #ff8e53);
+ /* background: linear-gradient(135deg, #ff6b9d, #ff8e53); */
+ background-color: #BF0426;
   color: white;
   border: none;
   border-radius: 4px;
@@ -118,7 +119,7 @@ input:focus {
 .backToLogin {
   display: inline-block;
   margin-top: 15px;
-  color: #e91e63;
+  color: #BF0426;
   font-weight: bold;
   font-size: 14px;
   cursor: pointer;
