--- a/src/components/member/memberdetails/Memberdetail.module.css
+++ b/src/components/member/memberdetails/Memberdetail.module.css
@@ -162,21 +162,25 @@
 } */
 .work {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
   gap: 20px;
-  margin: 0;
+  justify-content: center;
+  margin: 0 auto;
   padding: 20px 0;
+  width: 100%;
+  max-width: 1200px;
 }
+
 
 .workItem {
   background: #fff;
   border-radius: 12px;
-  overflow: hidden;
   box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
+  padding-top: 60px;
   text-align: center;
   position: relative;
-  padding-top: 60px;
+  min-height: 280px;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
 .workItem:hover {
@@ -186,25 +190,27 @@
 
 .imageWrapper {
   position: absolute;
-  top: -40px;
+  top: 20px;
   left: 50%;
   transform: translateX(-50%);
-  background: linear-gradient(to right, #e74c3c, #f39c12, #27ae60, #2980b9);
-  width: 80px;
-  height: 80px;
+  /* background: linear-gradient(to right, #e74c3c, #f39c12, #27ae60); */
+  width: 70px;
+  height: 70px;
   border-radius: 50%;
-  padding: 4px;
+  padding: 3px;
   display: flex;
   align-items: center;
   justify-content: center;
+  z-index: 2;
 }
 
+
 .profileImage {
-  width: 70px;
-  height: 70px;
+  width: 100px;
+  height: 100px;
   object-fit: cover;
   border-radius: 50%;
-  border: 3px solid #fff;
+  border: 3px solid #bdb7b7;
   background: #fff;
 }
 
@@ -213,16 +219,20 @@
 }
 
 .maintext h4 {
-  font-size: 1.2rem;
+  font-size: 26px;
   font-weight: 700;
-  color: #2c3e50;
+  color: #333;
   margin-bottom: 6px;
 }
 
 .maintext p {
   font-size: 0.95rem;
-  color: #7f8c8d;
+  color: #515657;
   margin: 4px 0;
+}
+.singleItem {
+  grid-template-columns: 1fr;
+  max-width: 400px;
 }
 
 .feedback {
@@ -230,11 +240,12 @@
   font-weight: 600;
 }
 
+
 /* Title styling */
 .title {
-  font-size: 1.9rem;
+  font-size: 26px;
   font-weight: 700;
-  color: #5a2d82;
+  color: #333;
   margin: 30px 0 15px;
   text-align: center;
   text-transform: uppercase;
