--- a/src/components/contacts/contacts/Contact.module.css
+++ b/src/components/contacts/contacts/Contact.module.css
@@ -210,7 +210,7 @@
   0% { opacity: 0; transform: translateY(20px); }
   100% { opacity: 1; transform: translateY(0); }
 }
-.contactDetails {
+/* .contactDetails {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -228,7 +228,7 @@
   width: 100%;
   height: 250px;
   border: 0;
-}
+} */
 
 /* Responsive Design */
 @media (max-width: 1024px) {
